Chilisauce-Backend/chilisauce-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chilisauce-app
  namespace: chilisauce
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 3
  selector:
    matchLabels:
      app: chilisauce-backend
  template:
    metadata:
      labels:
        app: chilisauce-backend
    spec:
      serviceAccountName: chilisauce-serviceaccount
      terminationGracePeriodSeconds: 60
      containers:
        - name: chilisauce
          image: 0892668/chilisauce-be:0.0.2
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "1000m"
            limits:
              memory: "1Gi"
              cpu: "1500m"
          lifecycle:
            preStop:
              exec:
                command: [ "/bin/sh","-c","sleep 10" ]
          startupProbe:
            httpGet:
              path: /probe/startup
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /probe/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            successThreshold: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /probe/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            failureThreshold: 7
