Chilisauce-Backend/chilisauce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chilisauce-service
  namespace: chilisauce
spec:
  selector:
    app: chilisauce-backend
  ports:
    - protocol: TCP
      port: 8080
